<resources>
    <string name="app_name">Fishing Monitor</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="state_1_msg">階段：1(普)</string>
    <string name="state_2_msg">階段：2(頓)</string>
    <string name="state_3_msg">階段：3(跳)</string>
    <string name="state_4_msg">階段：4(穩)</string>
    <string name="state_5_msg">階段：5(拖)</string>
    <string name="start">開始記錄</string>
    <string name="stop">停止記錄</string>
    <string name="save_data">儲存資料</string>
    <string name="state_1">普</string>
    <string name="state_2">頓</string>
    <string name="state_3">跳</string>
    <string name="state_4">穩</string>
    <string name="state_5">拖</string>

    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="write_data">00</string>
    <string name="write">write</string>
    <string name="notify">notify</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
</resources>
