<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/black"
    tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <FrameLayout
            android:layout_weight="0.5"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:id="@+id/chart_layout"></FrameLayout>

        <LinearLayout
            android:layout_weight="0.5"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:weightSum="1">

            <TextView
                android:textColor="@color/state_text_color"
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/state_1_msg"
                android:textSize="15pt"
                android:id="@+id/state_text"
                android:layout_weight="0.50" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:background="@color/state_off_color"
                    android:layout_weight="0.2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/state_1"
                    android:id="@+id/s1_button" />

                <Button
                    android:background="@color/state_off_color"
                    android:layout_weight="0.2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/state_2"
                    android:id="@+id/s2_button" />

                <Button
                    android:background="@color/state_off_color"
                    android:layout_weight="0.2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/state_3"
                    android:id="@+id/s3_button" />

                <Button
                    android:background="@color/state_off_color"
                    android:layout_weight="0.2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/state_4"
                    android:id="@+id/s4_button" />

                <Button
                    android:background="@color/state_off_color"
                    android:layout_weight="0.2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/state_5"
                    android:id="@+id/s5_button" />
            </LinearLayout>

            <Button
                android:background="@color/start_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/start"
                android:id="@+id/start_button"
                android:layout_gravity="center_horizontal" />

            <Button
                android:enabled="false"
                android:background="@color/save_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save_data"
                android:id="@+id/save_button"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
